--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,9 @@
 [[redirects]]
+from = "/api/login/*"
+to = "https://61b094073c954f001722a496.mockapi.io/api/:splat"
+status = 200
+force = true
+[[redirects]]
 from = "/api/*"
 to = "https://61b094073c954f001722a496.mockapi.io/api/:splat"
 status = 200
